Added placeholder for stripe features

--- a/donations/templates/donations/donation_form.html
+++ b/donations/templates/donations/donation_form.html
@@ -85,6 +85,10 @@
                         </div>
                     </fieldset>
 
+                    <div>
+                        Stripe stuff goes here
+                    </div>
+
                     <input type="submit" value="Submit" class="btn btn-success">
 
                     <!-- <div>
