--- a/donations/static/donations/css/donations.css
+++ b/donations/static/donations/css/donations.css
@@ -13,9 +13,19 @@
 
 .selectors-container {
     text-align: center;
-    float: right;
     align-items: center;
-    margin-right: 50%;
+    margin: auto;
+}
+
+.dropdown_style {
+    width: 50%;
+    text-align: center;
+    border-radius: 5px;
+    border: 5px black;
+}
+
+.text-center {
+    align-items: center;
 }
 
 .custom-input-label {
