--- a/templates/base.html
+++ b/templates/base.html
@@ -58,6 +58,7 @@
     {% endblock %}
 
     {% block postloadjs %}
+    {{ block.super }}
     <script type="text/javascript">
         $('.toast').toast('show');
     </script>
