--- a/donations/templates/donations/donation_form.html
+++ b/donations/templates/donations/donation_form.html
@@ -83,6 +83,17 @@
                                 donate, without it costing you a penny more. 
                             </p>
                         </div>
+                        <div class="form-check form-check-inline float-right">
+                            {% if user.is_authenticated %}
+                                <label class="form-check-label" for="id-save-info">Save this information to my profile</label>
+                                <input class="form-check-input" type="checkbox" id="id-save-info" name="save-info" checked>
+                            {% else %}
+                                <label class="form-check-label" for="id-save-info">
+                                    <a class="text-info" href="{% url 'account_signup' %}">Create an account</a> or 
+                                    <a class="text-info" href="{% url 'account_login' %}">login</a> to save this information
+                                </label>
+                            {% endif %}
+                        </div>
                     </fieldset>
 
                     <div>
