--- a/donations/templates/donations/donation_success.html
+++ b/donations/templates/donations/donation_success.html
@@ -11,7 +11,7 @@
 
 {% block content %}
 	<div id="box">
-		<h4>Thank you for your donation of ${{amount}}!</h4>
+		<h4>Thank you for your donation of £{{ donation.donation_total }}!</h4>
 		<p>Your donation helps the cause of whale and marine wildlife conservation around the world. </p>
 		<hr>
 		<a class="" href="{% url 'home' %}">Home</a>
