--- a/donations/templates/donations/donation_form.html
+++ b/donations/templates/donations/donation_form.html
@@ -147,5 +147,5 @@
 {% endblock %}
 
 {% block postloadjs %}
-    <script src="{% static 'donations/js/donations.js' %}"></script>
+    <script type="text/javascript" src="{% static 'donations/js/donations.js' %}"></script>
 {% endblock %}
