--- a/profiles/static/profiles/css/profile.css
+++ b/profiles/static/profiles/css/profile.css
@@ -11,3 +11,11 @@
     text-align: center;
     vertical-align: middle;
 }
+
+.profile-form-input {
+    border-radius: 20px;
+}
+
+#id_default_country {
+    margin: 5px;
+}
