Tries to add gift aid calculation to donation success view

--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -58,7 +58,7 @@
                                     </td>
                                     <td>{{ donation.date }}</td>
                                     <td>{{ donation.gift_aid }}</td>
-                                    <td>{{ donation.donation_total }}</td>
+                                    <td>£{{ donation.donation_total }}</td>
                                 </tr>
                                 {% endfor %}
                             </tbody>
