--- a/donations/templates/donations/donation_success.html
+++ b/donations/templates/donations/donation_success.html
@@ -12,6 +12,9 @@
 {% block content %}
 	<div id="box">
 		<h4>Thank you for your donation of £{{ donation.donation_total }}!</h4>
+		{% if donation.gift_aid %}
+			<h5>With Gift Aid, your donation of £{{ donation.donation_total }} is worth £{{ donation_gift_aid }} to our causes! Thank you!</h5>
+		{% endif %}
 		<p>Your donation helps the cause of whale and marine wildlife conservation around the world. </p>
 		<hr>
 		<a class="" href="{% url 'home' %}">Home</a>
