--- a/donations/templates/donations/donation_form.html
+++ b/donations/templates/donations/donation_form.html
@@ -100,45 +100,7 @@
                         Stripe stuff goes here
                     </div>
 
-                    <input type="submit" value="Submit" class="btn btn-success">
-
-                    <!-- <div>
-                        <label for="title">Title *</label>
-                        <select name="title form-select" required>
-                            <option value="">Please select</option>
-                            <option value="Dr.">Dr.</option>
-                            <option value="Master">Master</option>
-                            <option value="Miss">Miss</option>
-                            <option value="Mr.">Mr.</option>
-                            <option value="Mrs.">Mrs.</option>
-                            <option value="Ms.">Ms.</option>
-                            <option value="Mx.">Mx.</option>
-                            <option value="Rev.">Rev.</option>
-                            <option value="Sir">Sir</option>
-                            <option value="Lord">Lord</option>
-                            <option value="Lady">Lady</option>
-                        </select>
-                    </div>
-
-                    <div>
-                        <label for="first-name">First name *</label>
-                        <input type="text" name="first-name" placeholder="First name" min="2" required>
-                    </div>
-
-                    <div>
-                        <label for="last-name">Last name *</label>
-                        <input type="text" name="last-name" placeholder="Last name" required>
-                    </div>
-
-                    <div>
-                        <label for="email">Email address *</label>
-                        <input type="text" name="email" placeholder="Email address" required>
-                    </div>
-
-                    <div>
-                        <label for="phone-number">Phone number</label>
-                        <input type="text" name="phone-number" placeholder="Phone number">
-                    </div> -->
+                    <input type="submit" value="Donate" class="btn btn-success donate-btn-style">
 
                 </form>
             </div>
