Gets stripe elements showing on donation form

--- a/donations/static/donations/css/donations.css
+++ b/donations/static/donations/css/donations.css
@@ -1,23 +1,25 @@
 /* Stripe elements taken from Stripe's outdated docs; edited according to the Boutique Ado project */
+@import url('https://fonts.googleapis.com/css2?family=Lobster&family=Righteous&family=Roboto&display=swap');
 
-/* .StripeElement,
+
+.StripeElement,
 .stripe-style-input {
   box-sizing: border-box;
   height: 40px;
   padding: 10px 12px;
   border: 1px solid transparent;
-  border-radius: 0px;
+  border-radius: 4px;
   background-color: white;
   box-shadow: 0 1px 3px 0 #e6ebf1;
   -webkit-transition: box-shadow 150ms ease;
   transition: box-shadow 150ms ease;
-} */
+}
 
-.StripeElement--focus,
+/* .StripeElement--focus,
 .stripe-style-input:focus,
 .stripe-style-input:active {
   box-shadow: 0 1px 3px 0 #cfd7df;
-}
+} */
 
 .StripeElement--webkit-autofill {
   background-color: #fefde5 !important;
