--- a/donations/templates/donations/donation_form.html
+++ b/donations/templates/donations/donation_form.html
@@ -118,4 +118,5 @@
     {{ stripe_public_key|json_script:"id_stripe_public_key" }}
     {{ client_secret|json_script:"id_client_secret" }}
     <script type="text/javascript" src="{% static 'donations/js/donations.js' %}"></script>
+    <script type="text/javascript" src="{% static 'donations/js/stripe_elements.js' %}"></script>
 {% endblock %}
