--- a/templates/base.html
+++ b/templates/base.html
@@ -46,7 +46,17 @@
     {% if messages %}
         <div class="message-container">
             {% for message in messages %}
-                {% include 'includes/toasts/toast_error.html' %}
+                {% with message.level as level %}
+                    {% if level == 40 %}
+                        {% include 'includes/toasts/toast_error.html' %}
+                    {% elif level == 30 %}
+                        {% include 'includes/toasts/toast_warning.html' %}
+                    {% elif level == 25 %}
+                        {% include 'includes/toasts/toast_success.html' %}
+                    {% else %}
+                        {% include 'includes/toasts/toast_info.html' %}
+                    {% endif %}
+                {% endwith %}
             {% endfor %}
         </div>
     {% endif %}
@@ -59,8 +69,7 @@
 
     {% block postloadjs %}
     {{ block.super }}
-    <script type="text/javascript">
-        $('.toast').toast('show');
+    <script type="text/javascript" src="{% static 'js/toasts.js' %}">
     </script>
     {% endblock %}
     
