Restyles navbar icon options

--- a/templates/includes/header-nav.html
+++ b/templates/includes/header-nav.html
@@ -17,16 +17,22 @@
             <div class="col-8 collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav w-auto mx-auto">
                     <li class="nav-item">
-                        <i class="fas fa-users text-light"></i>
-                        <a href="#" class="btn btn-lg text-light">Become a member</a>
+                        <a href="#" class="btn btn-lg text-light">
+                            <i class="fas fa-users text-light"></i>
+                            <p>Become a member</p>
+                        </a>
                     </li>
                     <li class="nav-item">
-                        <i class="fas fa-hand-holding-usd text-light"></i>
-                        <a href="{% url 'add_donation' %}" class="btn btn-lg text-light">Donate</a>
+                        <a href="{% url 'add_donation' %}" class="btn btn-lg text-light">
+                            <i class="fas fa-hand-holding-usd text-light"></i>
+                            <p>Donate</p>
+                        </a>
                     </li>
                     <li class="nav-item">
-                        <i class="fas fa-chart-line text-light"></i>
-                        <a href="#" class="btn btn-lg text-light">Sponsor a fundraiser</a>
+                        <a href="#" class="btn btn-lg text-light">
+                            <i class="fas fa-chart-line text-light"></i>
+                            <p>Sponsor a fundraiser</p>
+                        </a>
                     </li>
                     <li class="nav-item list-inline-item dropdown">
                         <a href="#" id="user-options" data-bs-toggle="dropdown" aria-haspopup="true"
