--- a/donations/templates/donations/donation_success.html
+++ b/donations/templates/donations/donation_success.html
@@ -1,6 +1,10 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block extra_css %}
+    <link rel="stylesheet" href="{% static 'donations/css/donations.css' %}">
+{% endblock %}
+
 {% block page_header %}
     <div class="container header-container">
         <div class="row">
@@ -10,21 +14,23 @@
 {% endblock %}
 
 {% block content %}
-	<div id="box">
-		<h4>Thank you for your donation of £{{ donation.donation_total }}!</h4>
-		{% if donation.gift_aid %}
-			<h5>With Gift Aid, your donation of £{{ donation.donation_total }} is worth £{{ donation_gift_aid | floatformat:2 }} to our causes! Thank you!</h5>
-		{% endif %}
-		<p>Your donation helps the cause of whale and marine wildlife conservation around the world. </p>
-		<hr>
-		<a class="" href="{% url 'home' %}">Home</a>
-	</div>
-	<div>
-		{% if from_profile %}
-			<a href="{% url 'profile' %}" class="return-to-profile">
-				Return to profile
-			</a>
-		{% endif %}
+	<div class="success-content">
+		<div id="box" >
+			<h4>Thank you for your donation of £{{ donation.donation_total }}!</h4>
+			{% if donation.gift_aid %}
+				<h5>With Gift Aid, your donation of £{{ donation.donation_total }} is worth £{{ donation_gift_aid | floatformat:2 }} to our causes! Thank you!</h5>
+			{% endif %}
+			<p>Your donation helps the cause of whale and marine wildlife conservation around the world. </p>
+			<hr>
+			<a class="" href="{% url 'home' %}">Home</a>
+		</div>
+		<div>
+			{% if from_profile %}
+				<a href="{% url 'profile' %}" class="return-to-profile">
+					Return to profile
+				</a>
+			{% endif %}
+		</div>
 	</div>
 
 {% endblock content %}
