--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -20,7 +20,7 @@
 
 {% block content %}
     <h2>{{ post.title }}</h2>
-    <small>Posted at {{ post.date_added }}</small>
+    <small>Posted at {{ post.created_on }}</small>
     <p><strong>{{ post.intro }}</strong></p>
     <p>{{ post.body }}</p>
     <hr>
@@ -30,7 +30,7 @@
             <div class="">
                 <div>
                     <p>
-                        <strong>{{ comment.name }}</strong> <small>{{ comment.date_added }}</small>
+                        <strong>{{ comment.comment_creator }}</strong> <small>{{ comment.created_when }}</small>
                         <br>
                         {{ comment.body }}
                     </p>
