--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -20,7 +20,7 @@
 
 {% block content %}
     <h2>{{ post.title }}</h2>
-    <small>Posted at {{ post.created_on }}</small>
+    <small>Posted on {{ post.created_on }}</small>
     <p><strong>{{ post.intro }}</strong></p>
     <p>{{ post.body }}</p>
     <hr>
