--- a/blog/templates/blog/blog.html
+++ b/blog/templates/blog/blog.html
@@ -29,7 +29,7 @@
                 {% for post in posts %}
                     <div class="block">
                         <h2>{{ post.title }}</h2>
-                        <small>Posted on {{ post.created_on }}</small>
+                        <small>Posted on {{ post.created_on }} by {{ post.creator }}</small>
                         <p>{{ post.intro }}</p>
                         <a href="{% url 'post_detail' post.slug %}">Read more</a>
                     </div>
