--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -19,40 +19,48 @@
 {% endblock %}
 
 {% block content %}
-    <h2>{{ post.title }}</h2>
-    <small>Posted on {{ post.created_on }}</small>
-    <p><strong>{{ post.intro }}</strong></p>
-    <p>{{ post.body }}</p>
-    <hr>
-    <h2>Comments</h2>
-    {% for comment in post.comments.all %}
-        <article class="media">
-            <div class="">
+<div class="container">
+    <div class="row">
+        <div class="col-12">
+            <h2>{{ post.title }}</h2>
+            <small>Posted on {{ post.created_on }} by {{ post.creator }}</small>
+            <p><strong>{{ post.intro }}</strong></p>
+            <p>{{ post.body }}</p>
+            <hr>
+            <h2>Comments</h2>
+            {% for comment in post.comments.all %}
+                <article class="media">
+                    <div class="">
+                        <div>
+                            <p>
+                                <strong>{{ comment.comment_creator }}</strong> <small>{{ comment.created_when }}</small>
+                                <br>
+                                {{ comment.body }}
+                            </p>
+                        </div>
+                    </div>
+                </article>
+            {% empty %}
                 <div>
-                    <p>
-                        <strong>{{ comment.comment_creator }}</strong> <small>{{ comment.created_when }}</small>
-                        <br>
-                        {{ comment.body }}
-                    </p>
+                    <p>No comments yet!</p>
                 </div>
-            </div>
-        </article>
-    {% empty %}
-        <div>
-            <p>No comments yet!</p>
-        </div>
-    {% endfor %}
-    <hr>
-    <h3>Add comment</h3>
-    <form method="POST" action=".">
-        {% csrf_token %}
+            {% endfor %}
+            <hr>
+            <h3>Add comment</h3>
+            <div class="comment-form-holder">
+                <form method="POST" action=".">
+                    {% csrf_token %}
 
-        {{ form|crispy }}
+                    {{ form|crispy }}
 
-        <div class="field">
-            <div class="control">
-                <button class="button is-success">Submit</button>
+                    <div class="field">
+                        <div class="control">
+                            <button class="button is-success">Submit</button>
+                        </div>
+                    </div>
+                </form>
             </div>
         </div>
-    </form>
+    </div>
+</div>
 {% endblock %}
