Styles blog buttons

--- a/blog/static/blog/css/blog.css
+++ b/blog/static/blog/css/blog.css
@@ -11,6 +11,78 @@ input {
     max-width: 500px;
 }
 
+.text-white {
+    color: #fff;
+}
+
+button, .button {
+    display: inline-block;
+    font-weight: 400;
+    color: #fff;
+    text-align: center;
+    vertical-align: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-color: indigo;
+    border: 1px solid #000;
+    padding: .375rem .75rem;
+    margin: 5px;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: 20px;
+    text-decoration: none;
+
+    /* standard bootstrap btn transitions */
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+.cancel-button {
+    display: inline-block;
+    font-weight: 400;
+    color: #fff;
+    text-align: center;
+    vertical-align: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-color: darkred;
+    border: 1px solid #000;
+    padding: .375rem .75rem;
+    margin: 5px;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: 20px;
+    text-decoration: none;
+
+    /* standard bootstrap btn transitions */
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+.green-button {
+    display: inline-block;
+    font-weight: 400;
+    color: #fff;
+    text-align: center;
+    vertical-align: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-color: darkgreen;
+    border: 1px solid #000;
+    padding: .375rem .75rem;
+    margin: 5px;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: 20px;
+    text-decoration: none;
+
+    /* standard bootstrap btn transitions */
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
 
 
 /*-----------Media queries */
