--- a/blog/templates/blog/add_post.html
+++ b/blog/templates/blog/add_post.html
@@ -27,7 +27,10 @@
                 <form action="{% url 'add_post' %}" method="POST">
                     {% csrf_token %}
                     {{ form|crispy }}
-                    <button class="button" type="submit">Add post</button>
+                    <button class="green-button" type="submit">Add post</button>
+                    <a href="{% url 'blog' %}" class="cancel-button">
+                        Cancel
+                    </a>
                 </form>
             </div>
         </div>
