--- a/blog/templates/blog/blog.html
+++ b/blog/templates/blog/blog.html
@@ -24,14 +24,15 @@
             <div class="col-12">
                 <div class="blog-title">
                     <h2>The blog</h2>
-                    <a href="{% url 'add_post' %}">Add a post</a>
+                    <a href="{% url 'add_post' %}" class="text-white"><button class="green-button">Add a post</a></button>
                 </div>
                 {% for post in posts %}
                     <div class="block">
                         <h2>{{ post.title }}</h2>
                         <small>Posted on {{ post.created_on }} by {{ post.creator }}</small>
                         <p>{{ post.intro }}</p>
-                        <a href="{% url 'post_detail' post.slug %}">Read more</a>
+                        <a href="{% url 'post_detail' post.slug %}" class="button">Read more</a>
+                        <hr>
                     </div>
                 {% endfor %}
             </div>
