--- a/blog/templates/blog/blog.html
+++ b/blog/templates/blog/blog.html
@@ -24,14 +24,14 @@
             <div class="col-12">
                 <div class="blog-title">
                     <h2>The blog</h2>
-                    <a href="{% url 'add_post' %}" class="text-white"><button class="green-button">Add a post</a></button>
+                    <a href="{% url 'add_post' %}" class="text-white"><button class="green-button">Add a blog post</a></button>
                 </div>
                 {% for post in posts %}
                     <div class="block">
-                        <h2>{{ post.title }}</h2>
+                        <h2>{{ post.title | capfirst }}</h2>
                         <small>Posted on {{ post.created_on }} by {{ post.creator }}</small>
                         <p>{{ post.intro }}</p>
-                        <a href="{% url 'post_detail' post.slug %}" class="button">Read more</a>
+                        <a href="{% url 'post_detail' post.slug %}"><button>Read more</button></a>
                         <hr>
                     </div>
                 {% endfor %}
