--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -21,8 +21,44 @@
 {% block content %}
 <div class="container">
     <div class="row">
+        <div class="column">
+            <a href="{% url 'blog' %}" class="back-button"><button>Back to blogs</button></a>
+        </div>
+        {% if post.creator == request.user %}
+            <div class="column">
+                <a href="{% url 'edit_post' post.slug %}" class="edit-button"><button class="green-button">Edit blog post</button></a>
+            </div>
+            <!--Modal trigger-->
+            <div class="column">
+                <button class="modal-trigger cancel-button" data-bs-toggle="modal" data-bs-target="#deleteModal">
+                    Delete blog post
+                </button>
+            </div>
+            <div class="modal fade" id="deleteModal" tabindex="-1" atria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="deleteModalLabel">Are you sure?</h5>
+                            <button type="button" class="btn-close white-text" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            Are you sure you want to delete your blog post? Once it's gone, it's gone!
+                        </div>
+                        <div class="modal-footer">
+                            <button class="btn-secondary" data-bs-dismiss="modal">I want to keep it!</button>
+                            <a href="{% url 'delete_post' post.slug %}">
+                                <button class="cancel-button">
+                                    Delete the post!
+                                </button>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        {% endif %}
         <div class="col-12">
-            <h2>{{ post.title }}</h2>
+            <h2>{{ post.title | capfirst }}</h2>
             <small>Posted on {{ post.created_on }} by {{ post.creator }}</small>
             <p><strong>{{ post.intro }}</strong></p>
             <p>{{ post.body }}</p>
@@ -55,7 +91,7 @@
 
                     <div class="field">
                         <div class="control">
-                            <button class="button is-success">Submit</button>
+                            <button class="green-button is-success">Submit</button>
                         </div>
                     </div>
                 </form>
