--- a/templates/includes/header-nav.html
+++ b/templates/includes/header-nav.html
@@ -30,8 +30,8 @@
                     </li>
                     <li class="nav-item">
                         <a href="#" class="btn btn-lg text-light">
-                            <i class="fas fa-chart-line text-light"></i>
-                            <p>Sponsor a fundraiser</p>
+                            <i class="fab fa-microblog text-light"></i>
+                            <p>Blog</p>
                         </a>
                     </li>
                     <li class="nav-item list-inline-item dropdown">
