--- a/blog/templates/blog/edit_post.html
+++ b/blog/templates/blog/edit_post.html
@@ -20,12 +20,24 @@
 
 {% block content %}
     {% if post.creator == request.user %}
-        <h2>Edit blog post</h2>
-        <form action="{% url 'edit_post' %}" method="POST">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="m-auto main-container">
+                        <h2>Edit blog post</h2>
+        <form action="{% url 'edit_post' post.slug %}" method="POST">
             {% csrf_token %}
             {{ form|crispy }}
             <button class="button" type="submit">Update post</button>
+            <a href="{% url 'blog' %}" class="cancel-button text-white">
+                Cancel
+            </a>
         </form>
+                    </div>
+                </div>
+            </div>
+        </div>
     {% else %}
         <h4>This is not yours to edit!</h4>
+    {% endif %}
 {% endblock %}
