--- a/templates/includes/toasts/toast_warning.html
+++ b/templates/includes/toasts/toast_warning.html
@@ -1,11 +1,11 @@
 <div class="toast custom-toast rounded-0 border-top-0" data-autohide="false">
     <div class="arrow-up arrow-warning"></div>
     <div class="w-100 toast-capper bg-warning"></div>
-    <div class="toast-header bg-white text-dark">
+    <div class="toast-header bg-white text-dark float-end">
         <strong class="mr-auto">Warning!</strong>
+        <div class="toast-body bg-white float-end">
+            {{ message }}
+        </div>
         <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
-    </div>
-    <div class="toast-body bg-white">
-        {{ message }}
     </div>
 </div>
