Allows for white space in blog posts

--- a/blog/static/blog/css/blog.css
+++ b/blog/static/blog/css/blog.css
@@ -100,6 +100,10 @@ button, .button {
     transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
 
+.white-space-handler {
+    white-space: pre-wrap;
+}
+
 
 /*-----------Media queries */
 
