--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -61,7 +61,7 @@
             <h2>{{ post.title | capfirst }}</h2>
             <small>Posted on {{ post.created_on }} by {{ post.creator }}</small>
             <p><strong>{{ post.intro }}</strong></p>
-            <p>{{ post.body }}</p>
+            <p class="white-space-handler">{{ post.body }}</p>
             <hr>
             <h2>Comments</h2>
             {% for comment in post.comments.all %}
