Styles blog allauth pages and toasts for same

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -117,6 +117,7 @@ button {
     text-align: center;
     border-radius: 20px;
     padding: 20px;
+    margin-top: 20px;
 }
 
 .allauth-form-inner-content {
