--- a/templates/includes/header-nav.html
+++ b/templates/includes/header-nav.html
@@ -29,7 +29,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="btn btn-lg text-light">
+                        <a href="{% url 'blog' %}" class="btn btn-lg text-light">
                             <i class="fab fa-microblog text-light"></i>
                             <p>Blog</p>
                         </a>
