--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -19,8 +19,8 @@
 {% endblock %}
 
 {% block content %}
-<div class="container">
-    <div class="row">
+<div class="container px-4">
+    <div class="row py-lg-5 py-md-2">
         <div class="column">
             <a href="{% url 'blog' %}" class="back-button"><button>Back to blogs</button></a>
         </div>
@@ -84,17 +84,21 @@
             <hr>
             <h3>Add comment</h3>
             <div class="comment-form-holder">
-                <form method="POST" action=".">
-                    {% csrf_token %}
+                {% if user.is_authenticated %}
+                    <form method="POST" action=".">
+                        {% csrf_token %}
 
-                    {{ form|crispy }}
+                        {{ form|crispy }}
 
-                    <div class="field">
-                        <div class="control">
-                            <button class="green-button is-success">Submit</button>
+                        <div class="field">
+                            <div class="control">
+                                <button class="green-button is-success">Submit</button>
+                            </div>
                         </div>
-                    </div>
-                </form>
+                    </form>
+                {% else %}
+                    <h5>Please <a href="{% url 'account_login' %}">sign in</a> to the site if you wish to leave a comment.</h5>
+                {% endif %}
             </div>
         </div>
     </div>
