Add images for front page and sponsorships

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -14,8 +14,8 @@
 {% block content %}
 <div class="hero-image">
     <div class="hero-text">
-        <h1>I am John Doe</h1>
-        <p>And I'm a Photographer</p>
+        <h1>We are White Whale Fundraising</h1>
+        <p>And we're here to save the world (sort of)!</p>
         <button>Hire me</button>
     </div>
 </div>
