--- a/static/css/base.css
+++ b/static/css/base.css
@@ -222,3 +222,9 @@ button {
         font-size: 100%;
     }
 }
+
+@media (max-width: 992px) {
+    .header-container {
+        padding-top: 100px;
+    }
+}
