Fleshes out home page and creates sponsorship app

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -12,12 +12,21 @@
 {% endblock %}
 
 {% block content %}
-<div class="hero-image">
+
+<div class="parallax-1">
     <div class="hero-text">
         <h1>We are White Whale Fundraising</h1>
-        <p>And we're here to save the world (sort of)!</p>
-        <button>Hire me</button>
+        <h2>And we're here to save the world!</h2>
+        <p>Since the discovery of our eponymous white whale in the seas off the Aleutian Islands in January of 2022, we have been following it, keeping tabs on its migration, 
+            and raising funds for its continued study, conservation and appeasement.</p>
+        <button>Sponsor the whale</button>
+        <p>We also raise funds for the conservation of other sea-going critters. Scroll down to see some of the friends we've made along the way!</p>
     </div>
 </div>
-    <div>Am I in the right place?</div>
+<div class="parallax-2"></div>
+<div class="parallax-3"></div>
+<div class="parallax-4"></div>
+
+<div class="footer">Footer will go here</div>
+
 {% endblock %}
