--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -19,7 +19,7 @@
         <h2>And we're here to save the world!</h2>
         <p>Since the discovery of our eponymous white whale in the seas off the Aleutian Islands in January of 2022, we have been following it, keeping tabs on its migration, 
             and raising funds for its continued study, conservation and appeasement.</p>
-        <button>Sponsor the whale</button>
+        <a href="{% url 'add_sponsorship' %}"><button>Sponsor the whale</button></a>
         <p>We also raise funds for the conservation of other sea-going critters. Scroll down to see some of the friends we've made along the way!</p>
     </div>
 </div>
