--- a/templates/includes/header-nav.html
+++ b/templates/includes/header-nav.html
@@ -4,7 +4,7 @@
         <div class="row flex-wrap container-fluid ">
             <div class="logo-container col-12 logo-position text-center mx-auto">
                 <h1>
-                    <a href="{% url 'home' %}" class="navbar-brand text-light logo">
+                    <a href="{% url 'home' %}" class="text-light logo">
                         White Whale Fundraising
                     </a>
                 </h1>
@@ -16,12 +16,6 @@
             </button>
             <div class="col-8 collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav w-auto mx-auto">
-                    <li class="nav-item">
-                        <a href="#" class="btn btn-lg text-light">
-                            <i class="fas fa-users text-light"></i>
-                            <p>Become a member</p>
-                        </a>
-                    </li>
                     <li class="nav-item">
                         <a href="{% url 'add_donation' %}" class="btn btn-lg text-light">
                             <i class="fas fa-hand-holding-usd text-light"></i>
