--- a/static/css/base.css
+++ b/static/css/base.css
@@ -3,6 +3,7 @@
 html {
     height: 100%;
     font-family: 'Roboto', sans-serif;
+    background: #F2F3F4;
 }
 
 body {
@@ -52,6 +53,7 @@ button {
 .logo {
     margin: auto;
     font-size: 75%;
+    text-decoration: none;
 }
 
 .gutter-remove {
@@ -76,6 +78,12 @@ button {
 
 .header-container {
     padding-top: 164px;
+}
+
+/* -------------------------------- Footer */
+
+.footer-color {
+    background-color: #36013F
 }
 
 /* -------------------------------- Home page */
