--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,7 @@
     {% endblock %}
 
     {% block corecss %}
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3">
         <link rel="stylesheet" href="{% static 'css/base.css' %}">
@@ -67,6 +68,17 @@
 
     {% block content %}
     {% endblock %}
+
+    <footer class="footer footer-color">
+        <div class="content has-text-centered">
+          <p>
+            <strong class="white-text">White Whale Fundraising</strong>
+          </p>
+          <p>
+            <strong class="white-text">Registered charity number 000000</strong>
+          </p>
+        </div>
+      </footer>
 
     {% block postloadjs %}
     {{ block.super }}
