Add figure to donation success page

--- a/donations/templates/donations/donation_success.html
+++ b/donations/templates/donations/donation_success.html
@@ -31,6 +31,11 @@
 				</a>
 			{% endif %}
 		</div>
+		<figure>
+			<figcaption><strong>Look how happy you've made this happy chappy!</strong></figcaption>
+			<img src="../../media/images/happyfish.jpeg" alt="A happy fish sarcastic">
+		</figure>
+
 	</div>
 
 {% endblock content %}
