--- a/donations/static/donations/css/donations.css
+++ b/donations/static/donations/css/donations.css
@@ -93,6 +93,18 @@
     padding: 40px;
 }
 
+figure {
+    border: 1px #cccccc solid;
+    padding: 5px;
+    margin: auto;
+    max-width: 700px;
+}
+
+figcaption {
+    padding: 2px;
+    text-align: center;
+}
+
 /*------------------Media queries */
 
 @media (max-width: 992px) {
