--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -18,7 +18,7 @@
         <h1>We are White Whale Fundraising</h1>
         <div class="center-elements">
             <p class="intro-text">Since the discovery of our eponymous white whale in the seas off the Aleutian Islands in January of 2022, we have been following it, keeping tabs on its migration, 
-            and raising funds for its continued study and conservation.</p>
+            and raising funds for its continued study and conservation. You can help by donating, or you can get involved via our blog!</p>
         </div>
     </div>
 </div>
