--- a/blog/templates/blog/add_post.html
+++ b/blog/templates/blog/add_post.html
@@ -23,7 +23,7 @@
     <div class="row">
         <div class="col-12">
             <div class="m-auto main-container">
-                <h2>Create a blog post</h2>
+                <h2 class="create-blog-head">Create a blog post</h2>
                 <form action="{% url 'add_post' %}" method="POST">
                     {% csrf_token %}
                     {{ form|crispy }}
