--- a/templates/includes/header-nav.html
+++ b/templates/includes/header-nav.html
@@ -31,15 +31,19 @@
                         <a href="#" id="user-options" data-bs-toggle="dropdown" aria-haspopup="true"
                             aria-expanded="false" class="btn btn-lg text-light">
                             <i class="fas fa-sign-in-alt text-light"></i>
-                            <p class="my=0">My account</p>
+                            {% if request.user.is_authenticated %}
+                                <p>My account</p>
+                            {% else %}
+                                <p>Register</p>
+                            {% endif %}
                         </a>
                         <div class="dropdown-menu border-0" aria-labelledby="user-options">
                             {% if request.user.is_authenticated %}
-                            <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
-                            <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+                                <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
+                                <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
                             {% else %}
-                            <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
-                            <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
+                                <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
+                                <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
                             {% endif %}
                         </div>
                     </li>
