--- a/blog/templates/blog/edit_post.html
+++ b/blog/templates/blog/edit_post.html
@@ -22,7 +22,7 @@
     {% if post.creator == request.user %}
         <div class="container">
             <div class="row">
-                <div class="col-12">
+                <div class="col-12 margin-custom">
                     <div class="m-auto main-container">
                         <h2>Edit blog post</h2>
         <form action="{% url 'edit_post' post.slug %}" method="POST">
